--- a/svelteKit/svelteKit1-basic/src/app.html
+++ b/svelteKit/svelteKit1-basic/src/app.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %svelte.head%
+    <title>svelteKit example</title>
   </head>
   <body>
     <div id="svelte">%svelte.body%</div>
