feat(tailwindcss): update ＠layer example

--- a/tailwindcss/@layer/src/index.html
+++ b/tailwindcss/@layer/src/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>index.html</title>
+    <link rel="icon" href="data:,">
   </head>
   <body>
-    <link rel="stylesheet" href="./output.css" />
+    <link rel="stylesheet" href="./index.css" />
     <h1>hello world</h1>
     <div class="not-use-layer">
       <button class="btn btn-primary">not-use-layer-button</button>
