--- a/basic/window.getComputedStyle/src/index.html
+++ b/basic/window.getComputedStyle/src/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ECMA</title>
-    <meta charset="utf-8" />
+    <title>index.html</title>
+    <link rel="icon" href="data:,">
   </head>
   <body>
     <h1>Hello World</h1>
